--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
     "db:generate": "supabase gen types typescript --local > src/lib/database.types.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@tanstack/react-query": "^5.56.0",
+    "@tanstack/react-table": "^8.20.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@supabase/supabase-js": "^2.45.0",
-    "@supabase/ssr": "^0.5.0",
-    "@tanstack/react-query": "^5.56.0",
-    "@tanstack/react-table": "^8.20.0",
     "react-hook-form": "^7.53.0",
-    "@hookform/resolvers": "^3.9.0",
-    "zod": "^3.23.0",
-    "zustand": "^4.5.0",
-    "date-fns": "^3.6.0",
-    "lucide-react": "^0.447.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.5.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
-    "supabase": "^1.200.0"
+    "postcss": "^8.4.0",
+    "supabase": "^1.200.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.6.0"
   }
 }
